fix: change API update uesr to update me
